--- a/client/client_config.json
+++ b/client/client_config.json
@@ -34,6 +34,10 @@
   "heartbeat_interval_ms": 30000,
   "enable_periodic_scans": true,
   "periodic_scan_interval_ms": 15000,
+  "aggressive_detection": true,
+  "etw_burst_threshold": 5,
+  "etw_window_ms": 2000,
+  "etw_memscan_min_streak": 3,
   "detection_cooldown_ms": 8000,
   "cooldown_process_ms": 8000,
   "cooldown_overlay_ms": 8000,
@@ -43,5 +47,18 @@
   "cooldown_hijackedthread_ms": 15000,
   "cooldown_iathook_ms": 20000,
   "cooldown_integrity_ms": 60000,
-  "enable_kernel_bridge": true
+  "enable_kernel_bridge": true,
+  "enable_ce_behavior_monitor": true,
+  "ce_behavior_threshold": 4,
+  "ce_behavior_window_ms": 5000,
+  "ce_behavior_poll_ms": 500,
+  "enable_ce_registry_scanner": true,
+  "enable_ce_window_scanner": true,
+  "enable_speedhack_detector": true,
+  "speedhack_sensitivity": 3,
+  "speedhack_monitor_interval_ms": 1000,
+  "cooldown_ce_behavior_ms": 15000,
+  "cooldown_ce_registry_ms": 20000,
+  "cooldown_ce_window_ms": 10000,
+  "cooldown_speed_hack_ms": 15000
 }
