--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -150,24 +150,39 @@
     <ClInclude Include="include\CodeIntegrityScanner.h" />
     <ClInclude Include="include\ConfigLoader.h" />
     <ClInclude Include="include\DigitalSignatureValidator.h" />
+    <ClInclude Include="include\ETHREADManipulationDetector.h" />
     <ClInclude Include="include\EtwHeuristics.h" />
     <ClInclude Include="include\FileIntegrityChecker.h" />
     <ClInclude Include="include\Heartbeat.h" />
+    <ClInclude Include="include\HeapSprayAnalyzer.h" />
+    <ClInclude Include="include\HardwareBreakpointMonitor.h" />
     <ClInclude Include="include\HijackedThreadScanner.h" />
     <ClInclude Include="include\HWID.h" />
     <ClInclude Include="include\IATHookScanner.h" />
     <ClInclude Include="include\InjectionScanner.h" />
     <ClInclude Include="include\JsonBuilder.h" />
     <ClInclude Include="include\KernelBridge.h" />
+    <ClInclude Include="include\KernelCallbackScanner.h" />
   <ClInclude Include="include\NetworkArtifactScanner.h" />
     <ClInclude Include="include\MemorySignatureScanner.h" />
     <ClInclude Include="include\NetworkClient.h" />
     <ClInclude Include="include\OverlayScanner.h" />
+    <ClInclude Include="include\PEBManipulationDetector.h" />
     <ClInclude Include="include\PeriodicScanner.h" />
     <ClInclude Include="include\ProcessThreadWatcher.h" />
+    <ClInclude Include="include\SuspiciousMemoryScanner.h" />
     <ClInclude Include="include\SpeedHackDetector.h" />
     <ClInclude Include="include\SignaturePackManager.h" />
+    <ClInclude Include="include\SignatureDatabase.h" />
+    <ClInclude Include="include\SignatureAutoUpdate.h" />
+  <ClInclude Include="include\SignatureTestFramework.h" />
+    <ClInclude Include="include\YaraRuleEngine.h" />
     <ClInclude Include="include\UniqueHandle.h" />
+    <ClInclude Include="include\VADManipulationDetector.h" />
+    <ClInclude Include="include\TelemetryCollector.h" />
+    <ClInclude Include="include\MLFeatureExtractor.h" />
+    <ClInclude Include="include\MLAnomalyDetector.h" />
+    <ClInclude Include="include\AdaptiveThresholdManager.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
@@ -182,28 +197,43 @@
     <ClCompile Include="src\CodeIntegrityScanner.cpp" />
     <ClCompile Include="src\ConfigLoader.cpp" />
     <ClCompile Include="src\DigitalSignatureValidator.cpp" />
+    <ClCompile Include="src\ETHREADManipulationDetector.cpp" />
     <ClCompile Include="src\EtwHeuristics.cpp" />
     <ClCompile Include="src\FileIntegrityChecker.cpp" />
     <ClCompile Include="src\Heartbeat.cpp" />
+    <ClCompile Include="src\HeapSprayAnalyzer.cpp" />
+    <ClCompile Include="src\HardwareBreakpointMonitor.cpp" />
     <ClCompile Include="src\HijackedThreadScanner.cpp" />
     <ClCompile Include="src\HWID.cpp" />
     <ClCompile Include="src\IATHookScanner.cpp" />
     <ClCompile Include="src\InjectionScanner.cpp" />
     <ClCompile Include="src\JsonBuilder.cpp" />
     <ClCompile Include="src\KernelBridge.cpp" />
+    <ClCompile Include="src\KernelCallbackScanner.cpp" />
   <ClCompile Include="src\DeviceObjectScanner.cpp" />
     <ClCompile Include="src\MemorySignatureScanner.cpp" />
   <ClCompile Include="src\NetworkArtifactScanner.cpp" />
     <ClCompile Include="src\NetworkClient.cpp" />
     <ClCompile Include="src\OverlayScanner.cpp" />
+    <ClCompile Include="src\PEBManipulationDetector.cpp" />
     <ClCompile Include="src\PeriodicScanner.cpp" />
     <ClCompile Include="src\ProcessThreadWatcher.cpp" />
+    <ClCompile Include="src\SuspiciousMemoryScanner.cpp" />
     <ClCompile Include="src\ServiceDriverScanner.cpp" />
     <ClCompile Include="src\SignaturePackManager.cpp" />
+    <ClCompile Include="src\SignatureDatabase.cpp" />
+    <ClCompile Include="src\SignatureAutoUpdate.cpp" />
+  <ClCompile Include="src\SignatureTestFramework.cpp" />
+    <ClCompile Include="src\YaraRuleEngine.cpp" />
     <ClCompile Include="src\CEBehaviorMonitor.cpp" />
     <ClCompile Include="src\CERegistryScanner.cpp" />
     <ClCompile Include="src\CEWindowScanner.cpp" />
     <ClCompile Include="src\SpeedHackDetector.cpp" />
+    <ClCompile Include="src\VADManipulationDetector.cpp" />
+    <ClCompile Include="src\TelemetryCollector.cpp" />
+    <ClCompile Include="src\MLFeatureExtractor.cpp" />
+    <ClCompile Include="src\MLAnomalyDetector.cpp" />
+    <ClCompile Include="src\AdaptiveThresholdManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="client_config.json" />
