--- a/client/client_config.json
+++ b/client/client_config.json
@@ -60,5 +60,99 @@
   "cooldown_ce_behavior_ms": 15000,
   "cooldown_ce_registry_ms": 20000,
   "cooldown_ce_window_ms": 10000,
-  "cooldown_speed_hack_ms": 15000
+  "cooldown_speed_hack_ms": 15000,
+  "enable_peb_manipulation_detector": true,
+  "peb_enable_memory_scan": true,
+  "peb_enable_toolhelp_validation": true,
+  "cooldown_peb_manipulation_ms": 20000,
+  "enable_hardware_breakpoint_monitor": true,
+  "hwbp_max_threshold": 2,
+  "hwbp_enable_anomaly_detection": true,
+  "hwbp_track_history": true,
+  "cooldown_hardware_breakpoint_ms": 15000,
+  "enable_suspicious_memory_scanner": true,
+  "susp_mem_min_region_size": 4096,
+  "susp_mem_enable_pattern_analysis": true,
+  "susp_mem_enable_entropy_check": true,
+  "susp_mem_flag_rwx": true,
+  "susp_mem_flag_private_executable": true,
+  "cooldown_suspicious_memory_ms": 20000,
+  "enable_heap_spray_analyzer": true,
+  "heap_spray_min_size": 65536,
+  "heap_spray_min_repeat_count": 100,
+  "heap_spray_min_density": 0.8,
+  "heap_spray_enable_nop_detection": true,
+  "heap_spray_enable_address_spray": true,
+  "cooldown_heap_spray_ms": 25000,
+  "enable_ethread_detector": true,
+  "cooldown_ethread_ms": 30000,
+  "enable_callback_scanner": true,
+  "cooldown_callback_ms": 60000,
+  "enable_vad_detector": true,
+  "vad_size_threshold": 104857600,
+  "cooldown_vad_ms": 30000,
+  "enable_telemetry": true,
+  "telemetry_collection_interval_ms": 5000,
+  "telemetry_aggregation_period_ms": 300000,
+  "telemetry_export_on_exit": true,
+  "telemetry_export_path": "telemetry_export.json",
+  "enable_ml_anomaly_detection": true,
+  "ml_use_isolation_forest": true,
+  "ml_use_one_class": true,
+  "ml_use_ensemble": true,
+  "ml_ensemble_weight": 0.5,
+  "ml_isolation_forest_trees": 100,
+  "ml_isolation_forest_subsample_size": 256,
+  "ml_isolation_forest_max_depth": 10,
+  "ml_one_class_nu": 0.1,
+  "ml_anomaly_threshold": 0.65,
+  "ml_min_training_samples": 50,
+  "ml_max_training_samples": 5000,
+  "ml_enable_online_learning": true,
+  "ml_online_update_interval": 100,
+  "ml_online_learning_rate": 0.1,
+  "ml_enable_model_persistence": false,
+  "ml_model_save_path": "ml_anomaly_model.bin",
+  "enable_ml_integration": true,
+  "ml_hybrid_mode": true,
+  "ml_detection_threshold": 0.7,
+  "ml_confidence_threshold": 0.6,
+  "ml_boost_indicators": true,
+  "ml_indicator_multiplier": 2.0,
+  "ml_enable_veto": false,
+  "ml_veto_threshold": 0.3,
+  "ml_log_scores": true,
+  "enable_adaptive_thresholds": true,
+  "use_per_player_profiles": true,
+  "use_global_baseline": true,
+  "default_sigma_multiplier": 3.0,
+  "min_baseline_samples": 100,
+  "max_profile_age_hours": 720,
+  "adaptive_min_threshold": 1,
+  "adaptive_max_threshold": 10,
+  "adaptive_decay_rate": 0.95,
+  "enable_auto_decay": true,
+  "trust_score_initial": 0.5,
+  "trust_score_increment": 0.05,
+    "trust_score_decrement": 0.2,
+    "enable_signature_auto_update": true,
+    "auto_update_check_interval_ms": 300000,
+    "auto_update_retry_interval_ms": 60000,
+    "auto_update_max_retries": 3,
+    "auto_update_channel": "stable",
+    "auto_update_allow_channel_switch": false,
+    "auto_update_rollout_group": "default",
+    "auto_update_participate_canary": false,
+    "auto_update_canary_percentage": 5,
+    "auto_update_require_signature": true,
+    "auto_update_strict_version_check": true,
+    "auto_update_enable_rollback": true,
+    "auto_update_rollback_threshold_sec": 0,
+    "auto_update_keep_backup_versions": 3,
+    "auto_update_prefer_delta": true,
+    "auto_update_enable_compression": true,
+    "auto_update_max_download_mb": 10,
+    "auto_update_cache_path": "signatures\\cache",
+    "auto_update_backup_path": "signatures\\backup"
 }
+
