--- a/client/client_config.json
+++ b/client/client_config.json
@@ -150,9 +150,33 @@
     "auto_update_rollback_threshold_sec": 0,
     "auto_update_keep_backup_versions": 3,
     "auto_update_prefer_delta": true,
-    "auto_update_enable_compression": true,
-    "auto_update_max_download_mb": 10,
-    "auto_update_cache_path": "signatures\\cache",
-    "auto_update_backup_path": "signatures\\backup"
+  "auto_update_enable_compression": true,
+  "auto_update_max_download_mb": 10,
+  "auto_update_cache_path": "signatures\\cache",
+  "auto_update_backup_path": "signatures\\backup",
+  "enable_adaptive_polling": true,
+  "adaptive_min_interval_ms": 1000,
+  "adaptive_max_interval_ms": 60000,
+  "adaptive_change_cooldown_ms": 5000,
+  "adaptive_min_change_percent": 0.15,
+  "adaptive_medium_rate_threshold": 0.001,
+  "adaptive_high_rate_threshold": 0.005,
+  "adaptive_critical_rate_threshold": 0.02,
+  "adaptive_cpu_low_percent": 40.0,
+  "adaptive_cpu_high_percent": 85.0,
+  "enable_scan_prioritization": true,
+  "enable_dynamic_priority_adjustment": true,
+  "enable_load_balancing": true,
+  "cpu_threshold_percent": 80.0,
+  "critical_scan_max_delay_ms": 1000,
+  "high_scan_max_delay_ms": 5000,
+  "scan_prioritization_budget_ms": 100,
+  "recent_detection_boost_weight": 2.0,
+  "detection_rate_boost_weight": 1.5,
+  "false_positive_penalty_weight": 1.0,
+  "recent_detection_window_ms": 300000,
+  "statistics_update_interval_ms": 30000,
+  "enable_simd_acceleration": true,
+  "enable_simd_benchmark": false,
+  "simd_benchmark_iterations": 5
 }
-
