--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -138,6 +138,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="include\AntiTampering.h" />
+    <ClInclude Include="include\MemoryIntegrity.h" />
     <ClInclude Include="include\DeviceObjectScanner.h" />
     <ClInclude Include="include\CEBehaviorMonitor.h" />
     <ClInclude Include="include\CERegistryScanner.h" />
@@ -165,6 +167,7 @@
     <ClInclude Include="include\KernelCallbackScanner.h" />
   <ClInclude Include="include\NetworkArtifactScanner.h" />
     <ClInclude Include="include\MemorySignatureScanner.h" />
+    <ClInclude Include="include\Logger.h" />
     <ClInclude Include="include\NetworkClient.h" />
     <ClInclude Include="include\OverlayScanner.h" />
     <ClInclude Include="include\PEBManipulationDetector.h" />
@@ -197,6 +200,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  <ClCompile Include="src\AntiTampering.cpp" />
+  <ClCompile Include="src\MemoryIntegrity.cpp" />
     <ClCompile Include="src\AntiSuspend.cpp" />
     <ClCompile Include="src\CodeIntegrityScanner.cpp" />
     <ClCompile Include="src\ConfigLoader.cpp" />
@@ -218,6 +223,16 @@
     <ClCompile Include="src\MemorySignatureScanner.cpp" />
   <ClCompile Include="src\NetworkArtifactScanner.cpp" />
     <ClCompile Include="src\NetworkClient.cpp" />
+    <ClCompile Include="src\Logger.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="src\OverlayScanner.cpp" />
     <ClCompile Include="src\PEBManipulationDetector.cpp" />
     <ClCompile Include="src\PeriodicScanner.cpp" />
